Changes to accomodate EP

--- a/web/flutter_app.htm
+++ b/web/flutter_app.htm
@@ -1,12 +1,6 @@
 <html>
   <body>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function () {
-          navigator.serviceWorker.register("flutter_service_worker.js");
-        });
-      }
-    </script>
+    <script src="./service_worker.js" type="application/javascript"></script>
     <script src="main.dart.js" type="application/javascript"></script>
   </body>
 </html>
